--- a/resources/scss/modules/_portfolio.scss
+++ b/resources/scss/modules/_portfolio.scss
@@ -15,6 +15,9 @@
     .segment.portfolio {
         .portfolio-cards {
             justify-content: center;
+            .card {
+                width: 100%;
+            }
         }
     }
 }
