:lipstick: New Design

--- a/resources/scss/main.scss
+++ b/resources/scss/main.scss
@@ -20,6 +20,7 @@
 @import "modules/navigationMenu";
 @import "modules/blinker";
 @import "modules/segment";
+@import "modules/education-grid";
 @import "modules/experience-grid";
 @import "modules/progress-bar";
 @import "modules/skills-grid";
