--- a/resources/scss/base/_default.scss
+++ b/resources/scss/base/_default.scss
@@ -11,15 +11,19 @@ html, body {
 
 html {
 	font-size: 100%;
-	font-family: 'Open Sans', sans-serif;
+	font-family: 'SF-Pro';
 	font-weight: normal;
 	line-height: 1.5;
 	-webkit-font-smoothing: antialiased;
 }
 
+h1, h2, h3, h4, h5, h6 {
+	font-weight: 400;
+}
+
 span {
-	font-size: 100%;
-	font-family: 'Open Sans', sans-serif;
+	font-size: 14px;
+	font-family: 'SF-Pro';
 	font-weight: normal;
 }
 a {
@@ -38,10 +42,108 @@ a {
 }
 
 .white {
-	color: $awesome-white2!important;
+	color: $awesome-white!important;
 }
+
 
 @font-face {
     font-family: 'batmanFont';
     src: url('./fonts/batman.ttf');
+}
+
+// SF Pro Light
+
+@font-face {
+    font-family: 'SF-Pro';
+	font-style: normal;
+	font-weight: 300;
+    src: url('./fonts/SF-Pro-Text-Light.otf');
+}
+
+@font-face {
+    font-family: 'SF-Pro';
+	font-style: italic;
+	font-weight: 300;
+    src: url('./fonts/SF-Pro-Text-LightItalic.otf');
+}
+
+// SF Pro Regular
+
+@font-face {
+    font-family: 'SF-Pro';
+	font-style: normal;
+	font-weight: 400;
+    src: url('./fonts/SF-Pro-Text-Regular.otf');
+}
+
+@font-face {
+    font-family: 'SF-Pro';
+	font-style: italic;
+	font-weight: 400;
+    src: url('./fonts/SF-Pro-Text-RegularItalic.otf');
+}
+
+// SF Pro Medium
+
+@font-face {
+    font-family: 'SF-Pro';
+	font-style: normal;
+	font-weight: 500;
+    src: url('./fonts/SF-Pro-Text-Medium.otf');
+}
+
+@font-face {
+    font-family: 'SF-Pro';
+	font-style: italic;
+	font-weight: 500;
+    src: url('./fonts/SF-Pro-Text-MediumItalic.otf');
+}
+
+
+// SF Pro Semi bold
+
+@font-face {
+	font-family: 'SF-Pro';
+	font-style: normal;
+	font-weight: 600;
+	src: url('./fonts/SF-Pro-Text-Semibold.otf');
+}
+
+@font-face {
+	font-family: 'SF-Pro';
+	font-style: normal;
+	font-weight: 600;
+	src: url('./fonts/SF-Pro-Text-SemiboldItalic.otf');
+}
+
+// SF Pro Bold
+
+@font-face {
+    font-family: 'SF-Pro';
+	font-style: normal;
+	font-weight: 700;
+    src: url('./fonts/SF-Pro-Text-Bold.otf');
+}
+
+@font-face {
+    font-family: 'SF-Pro';
+	font-style: italic;
+	font-weight: 700;
+    src: url('./fonts/SF-Pro-Text-BoldItalic.otf');
+}
+
+// SF Pro Heavy
+
+@font-face {
+	font-family: 'SF-Pro';
+	font-style: normal;
+	font-weight: 800;
+	src: url('./fonts/SF-Pro-Text-Heavy.otf');
+}
+
+@font-face {
+	font-family: 'SF-Pro';
+	font-style: italic;
+	font-weight: 800;
+	src: url('./fonts/SF-Pro-Text-HeavyItalic.otf');
 }
