--- a/resources/scss/modules/_contact.scss
+++ b/resources/scss/modules/_contact.scss
@@ -1,31 +1,69 @@
 .segment.contact {
+    text-align: center;
+    .segment-title {
+        font-size: 35px;
+        font-weight: 400;
+        color: $flat-black;
+        margin-bottom: 0.5em;
+        text-align: center;
+    }
+    .subtitle {
+        font-size: 25px;
+        font-weight: 300;
+        color: $flat-black;
+        margin-bottom: 0.5em;
+        text-align: center;
+    }
+    hr {
+        border: 0;
+        background-color: rgba(151, 151, 151, 0.5);
+        width: 200px;
+        margin: 2em auto;
+        height: 2px;
+    }
     .contact-form {
-        max-width: 500px;
-        margin-top: 2em;
-        margin-left: auto;
-        margin-right: auto;
-        .field {
-            margin-bottom: 1.5em;
-            input,textarea {
-                padding: 18px 24px;
-                height: 55px;
-                border-radius: 0;
-                background-color: transparent;
-                text-transform: uppercase;
-                font-size: 12px;
-                letter-spacing: 1px;
-                box-shadow: none;
-                border-color: #e7e7e7;
+        max-width: 800px;
+        margin: 3em auto;
+        .row {
+            display: flex;
+            justify-content: center;
+            .column {
                 width: 100%;
-                border: 1px solid #ccc;
-                &:focus {
-                    outline: none;
-                    box-shadow: none;
-                    border-color: $red;
+                &:first-child {
+                    margin-right: 6em;
                 }
-            }
-            textarea {
-                min-height: 100px;
+                .field {
+                    margin-bottom: 1.5em;
+                    width: 100%;
+                    text-align: left;
+                    .header {
+                        font-weight: 300;
+                    }
+                    input,textarea {
+                        padding: 18px 0 18px 0;
+                        height: 60px;
+                        font-size: 14px;
+                        letter-spacing: 1px;
+                        box-shadow: none;
+                        width: 100%;
+                        font-weight: 300;
+                        background-color: transparent;
+                        border-bottom: 2px solid #e7e7e7;
+                        border-left: 0;
+                        border-right: 0;
+                        border-top: 0;
+                        font-family: "SF-Pro";
+                        &:focus {
+                            outline: none;
+                            box-shadow: none;
+                            border-color: $red;
+                        }
+                    }
+                    textarea {
+                        width: 100%;
+                        min-height: 170px;
+                    }
+                }
             }
         }
     }
@@ -35,12 +73,19 @@
         min-width: 250px;
         min-height: 50px;
         padding: 0;
-        text-transform: uppercase;
+        font-weight: 400;
+        font-size: 16px;
+        background-color: $awesome-white;
+        color: $flat-black;
+        border-radius: 56px;
+        border: 1px solid;
+        border-color: #979797;
         .loader {
             .loader-inner.line-scale {
                 div {
                     margin: 8px 3px 3px 3px;
                     height: 30px;
+                    background-color: $red;
                 }
             }
         }
@@ -52,6 +97,19 @@
         }
         &.positive {
             color: green;
+        }
+    }
+}
+
+@media (max-width: 768px) {
+    .segment.contact {
+        .contact-form {
+            .row {
+                flex-direction: column;
+                .column{
+
+                }
+            }
         }
     }
 }
