--- a/resources/scss/modules/_hexagon-loader.scss
+++ b/resources/scss/modules/_hexagon-loader.scss
@@ -1,5 +1,5 @@
 .loader-container {
-    background-color: $loader-bg;
+    background-image: $loader-bg;
     .hexagon-loader {
         position: fixed;
         top: 50%;
@@ -17,7 +17,7 @@
             height: 160px;
             display: block;
             position: absolute;
-            border: 2px solid #898a86;
+            border: 2px solid $flat-orange;
             border-radius: 50%;
             top: -2px;
             left: -2px;
@@ -37,7 +37,7 @@
             height: 160px;
             display: block;
             position: absolute;
-            border: 2px solid #c1bebb;
+            border: 2px solid $red;
             border-radius: 50%;
             top: -2px;
             left: -2px;
