--- a/resources/scss/modules/_navigationMenu.scss
+++ b/resources/scss/modules/_navigationMenu.scss
@@ -67,7 +67,6 @@
 		li {
 			list-style-type: none;
 			display: block;
-			text-transform: uppercase;
 			&.language-responsive-button {
 				display: block;
 			}
@@ -132,7 +131,7 @@
 				list-style-type: none;
 				display: inline-block;
 				text-align: center;
-				text-transform: uppercase;
+				text-transform: capitalize;
 				&.language-responsive-button {
 					display: none;
 				}
@@ -144,7 +143,7 @@
 					align-items: center;
 					padding-top: 20px;
 				    padding-bottom: 20px;
-				    font-size: 13px;
+				    font-size: 20px;
 
 					&:hover {
 						box-shadow: 0 -3px 0 $navigation-hover-text-color inset;
