--- a/resources/scss/theme/_theme.scss
+++ b/resources/scss/theme/_theme.scss
@@ -1,27 +1,24 @@
 @import "compass/css3";
 @import "compass/css3/animation";
 @import 'compass';
-@import url("https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i");
 
 // Typography
-$base-font: helvetica, arial, tahoma, verdana;
-$base-font-title: "Dosis", arial, tahoma, verdana;
+$base-font: "SF-Pro";
 
 /* Color Palletes */
 $awesome-white: #f9f9f9;
-$awesome-white2: #f5f5f5;
 $blue: cornflowerblue;
-$red: #E25041;
+$red: #ff656e;
 $pomegranate: #C0392B;
 $green: mediumaquamarine;
 $purple: mediumpurple;
 $silver: silver;
-$gray: #6d747c;
+$gray: #9C9C9C;
 $flatgray: #e7e7e7;
 $black: #34495e;
 $yellow: #FAC51C;
 $flat-blue: #2969B0;
-$flat-orange: #F37934;
+$flat-orange: #ffb681;
 $flat-carrot: #e67e22;
 $flat-pumpkin: #d35400;
 $flat-whiteCloud: #ecf0f1;
@@ -74,13 +71,13 @@ $timeline-color-white: $awesome-white;
 $hobbies-quotes-border: $awesome-white;
 
 /* UI Footer background  color */
-$footer-border: $flatgray;
+$footer-border: $awesome-white;
 $footer-color: $gray;
-$footer-bg: $awesome-white2;
+$footer-bg: $awesome-white;
 $download-bg: $red;
 
 
 /* Loader color */
 
-$loader-bg: $flat-black2;
-$loader-hexagon-color: $red;
+$loader-bg: linear-gradient(to right, $flat-orange, $red);
+$loader-hexagon-color: $awesome-white;
